2012-06-30 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Main.java: Added a check in order to prevent profile overwritings.
	* src/pandroid_event_viewer/pandorafms/Core.java: Added method which finds a string in a list (case insensitive). 

2012-06-29 Santiago Munín <burning1@gmail.com>
	* src/pandroid_event_viewer/pandorafms/Main.java: Added a little hack to make it compatible with v4.0.2
	* res/layout/main.xml: Added a little hack to make it compatible with v4.0.2

2012-06-27 Santiago Munín <burning1@gmail.com>

	* src/pandroid_event_viewer/pandorafms/Core.java: Added "apipass" parameter to petitions.
	* src/pandroid_event_viewer/pandorafms/Options.java: Added an API Password entry. Now, after getting the API version, it is stored in SharedPreferences.
	* src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java: Changed event parsing.
	* src/pandroid_event_viewer/pandorafms/API.java: Added some checks before parsing tags and groups.
	* res/values/strings.xml: Added new entries.
	* res/layout/options.xml: Added an API Password entry.

2012-06-26 Santiago Munín <burning1@gmail.com>

	* src/pandroid_event_viewer/pandorafms/API.java: Added new api calls.
	* src/pandroid_event_viewer/pandorafms/Core.java: Now connections can throw IOExceptions.
	* res/values/strings.xml: Added new entries.
	* src/pandroid_event_viewer/pandorafms/Options.java,
	  src/pandroid_event_viewer/pandorafms/CreateIncidentActivity.java,
      src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java,
      src/pandroid_event_viewer/pandorafms/PandroidEventviewerService.java,
      src/pandroid_event_viewer/pandorafms/EventList.java,
      src/pandroid_event_viewer/pandorafms/PopupValidationEvent.java,
      src/pandroid_event_viewer/pandorafms/Main.java: Now a toast is shown if there was any connection problem.

2012-06-25 Santiago Munín <burning1@gmail.com>
	